--- a/execution.cfg
+++ b/execution.cfg
@@ -19,7 +19,7 @@ test_suites=
     pmd_bonded
 targets=
     x86_64-native-linuxapp-gcc
-parameters=nic_type=niantic:func=true
+parameters=nic_type=cfg:func=true
 
 [Execution2]
 crbs=<Performance CRB IP Address>
