framework: add port config pci bus id check suites:    seperated checksum_offload function and performance port            requirements
Signed-off-by: Marvinliu <yong.liu@intel.com>

--- a/conf/ports.cfg
+++ b/conf/ports.cfg
@@ -5,5 +5,5 @@
 #     pci=Pci BDF,mac=Mac address,peer=Tester Pci BDF,numa=Port Numa 
 [DUT IP]
 ports = 
-    pci=XX:XX.X,intf=eth0
+    pci=XX:XX.X,intf=eth0;
     pci=YY:YY.Y,mac=XX:XX:XX:XX:XX:XX,peer=ZZ:ZZ.Z,numa=0
