--- a/execution.cfg
+++ b/execution.cfg
@@ -16,7 +16,8 @@ test_suites=
     fdir,
     vlan,
     ip_pipeline,
-    pmd_bonded
+    pmd_bonded,
+    dynamic_config
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
