add generic filter test for niantic and fortville nic test
Signed-off-by: huilong xu <huilongx.xu@intel.com>

--- a/executions/execution.cfg
+++ b/executions/execution.cfg
@@ -17,7 +17,8 @@ test_suites=
     vlan,
     ip_pipeline,
     pmd_bonded,
-    dynamic_config
+    dynamic_config,
+    generic_filter
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
