--- a/executions/execution_FVL.cfg
+++ b/executions/execution_FVL.cfg
@@ -3,7 +3,8 @@ crbs=<CRB IP Address>
 drivername=<driver name igb_uio or vfio-pci>
 test_suites=
     checksum_offload,
-    dynamic_config
+    dynamic_config,
+    generic_filter
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
