add dual vlan test case in default execution file
changed list:
    1. add dual vlan for niantic and fortville test
    2. add vlan for fortville test

Signed-off-by: huilong xu <huilongx.xu@intel.com>

--- a/executions/execution.cfg
+++ b/executions/execution.cfg
@@ -18,7 +18,8 @@ test_suites=
     ip_pipeline,
     pmd_bonded,
     dynamic_config,
-    generic_filter
+    generic_filter,
+    dual_vlan
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
