--- a/executions/execution_FVL.cfg
+++ b/executions/execution_FVL.cfg
@@ -4,7 +4,9 @@ drivername=<driver name igb_uio or vfio-pci>
 test_suites=
     checksum_offload,
     dynamic_config,
-    generic_filter
+    generic_filter,
+    dual_vlan,
+    vlan
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
