add shutdown api test for niantic and fortville NIC test
Signed-off-by: huilong xu <huilongx.xu@intel.com>

--- a/executions/execution.cfg
+++ b/executions/execution.cfg
@@ -19,7 +19,8 @@ test_suites=
     pmd_bonded,
     dynamic_config,
     generic_filter,
-    dual_vlan
+    dual_vlan,
+    shutdown_api
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
