--- a/executions/execution_FVL.cfg
+++ b/executions/execution_FVL.cfg
@@ -6,7 +6,8 @@ test_suites=
     dynamic_config,
     generic_filter,
     dual_vlan,
-    vlan
+    vlan,
+    shutdown_api
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
