add queue start/stop test for forvtille
Signed-off-by: huilong xu <huilongx.xu@intel.com>

--- a/executions/execution_FVL.cfg
+++ b/executions/execution_FVL.cfg
@@ -7,7 +7,8 @@ test_suites=
     generic_filter,
     dual_vlan,
     vlan,
-    shutdown_api
+    shutdown_api,
+    queue_start_stop
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
