add fdir for niantic and fortville test
Signed-off-by: huilong xu <huilongx.xu@intel.com>

--- a/executions/execution_FVL.cfg
+++ b/executions/execution_FVL.cfg
@@ -8,7 +8,8 @@ test_suites=
     dual_vlan,
     vlan,
     shutdown_api,
-    queue_start_stop
+    queue_start_stop,
+    fdir
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
