--- a/executions/execution.cfg
+++ b/executions/execution.cfg
@@ -20,7 +20,8 @@ test_suites=
     dynamic_config,
     generic_filter,
     dual_vlan,
-    shutdown_api
+    shutdown_api,
+    fdir
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
