add some test suite for niantic test
Signed-off-by: huilong xu <huilongx.xu@intel.com>

--- a/executions/execution.cfg
+++ b/executions/execution.cfg
@@ -13,7 +13,6 @@ test_suites=
     jumboframes,
     ipfrag,
     link_flowctrl,
-    fdir,
     vlan,
     ip_pipeline,
     pmd_bonded,
@@ -21,7 +20,12 @@ test_suites=
     generic_filter,
     dual_vlan,
     shutdown_api,
-    fdir
+    fdir,
+    ipv4_reassembly,
+    scatter,
+    pmdrssreta,
+    pmd,
+    l2fwd 
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
