add some test suite for fortville test
Signed-off-by: huilong xu <huilongx.xu@intel.com>

--- a/executions/execution_FVL.cfg
+++ b/executions/execution_FVL.cfg
@@ -10,7 +10,22 @@ test_suites=
     shutdown_api,
     queue_start_stop,
     tso,
-    fdir
+    fdir,
+    nvgre,
+    vxlan,
+    vxlan_sample,
+    pmd,
+    ipfrag,
+    timer,
+    jumboframes,
+    multiprocess,
+    l2fwd,
+    whitelist,
+    blacklist,
+    ipv4_reassembly,
+    scatter,
+    pmdrssreta,
+    pmdrss_hash
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
