Support specified dut ports map in virtual scenario
Signed-off-by: Marvin Liu <yong.liu@intel.com>

--- a/conf/ports.cfg
+++ b/conf/ports.cfg
@@ -4,8 +4,15 @@
 #     pci=Pci BDF,intf=Kernel interface;
 #     pci=Pci BDF,mac=Mac address,peer=Tester Pci BDF,numa=Port Numa 
 #     pci=Pci BDF,peer=IXIA:card.port
+# [VM NAME] virtual machine name; This section is for virutal scenario
+# ports =
+#     dev_idx=device index of ports info, peer=Tester Pci BDF
 [DUT IP]
 ports =
     pci=XX:XX.X,intf=eth0;
     pci=YY:YY.Y,mac=XX:XX:XX:XX:XX:XX,peer=ZZ:ZZ.Z,numa=0;
     pci=ZZ:ZZ.Y,peer=IXIA:X.Y
+[VM NAME]
+ports =
+    dev_idx=0,peer=XX:XX.X;
+    dev_idx=1,peer=YY:YY.Y;
