add ieee1588 test suite for fortville NIC
Signed-off-by: huilong xu <huilongx.xu@intel.com>

--- a/executions/execution_FVL.cfg
+++ b/executions/execution_FVL.cfg
@@ -25,7 +25,8 @@ test_suites=
     ipv4_reassembly,
     scatter,
     pmdrssreta,
-    pmdrss_hash
+    pmdrss_hash,
+    ieee1588
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
