add kni test case in fvl and niantic case test

--- a/executions/execution.cfg
+++ b/executions/execution.cfg
@@ -25,7 +25,8 @@ test_suites=
     scatter,
     pmdrssreta,
     pmd,
-    l2fwd 
+    l2fwd,
+    kni 
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
