--- a/executions/execution_FVL.cfg
+++ b/executions/execution_FVL.cfg
@@ -26,7 +26,8 @@ test_suites=
     scatter,
     pmdrssreta,
     pmdrss_hash,
-    ieee1588
+    ieee1588,
+    kni
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
