Support assign vf mac address in scenario configuration
Scenario module will call Netdevice module set_vf_mac_addr function to assign VF mac address.

Signed-off-by: Marvin Liu <yong.liu@intel.com>

--- a/conf/scene/vf_passthrough.cfg
+++ b/conf/scene/vf_passthrough.cfg
@@ -18,11 +18,13 @@ mem =
     size=2048,hugepage=no;
 disk =
     file=/storage/vm-image/vm0.img;
+login =
+    user=root,password=tester;
 dev_gen =
     pf_idx=0,vf_num=2,driver=default;
     pf_idx=1,vf_num=2,driver=default;
 device =
-    vf_idx=0,pf_dev=0,guestpci=auto;
-    vf_idx=0,pf_dev=1,guestpci=auto;
+    vf_idx=0,pf_dev=0,guestpci=auto,mac=00:00:00:00:01:01;
+    vf_idx=0,pf_dev=1,guestpci=auto,mac=00:00:00:00:01:02;
 vnc = 
     displayNum=1;
