tests: rename whitelist suite to mac_filter suite
Signed-off-by: Gu yongjie <yongjiex.gu@intel.com>

--- a/executions/execution.cfg
+++ b/executions/execution.cfg
@@ -7,7 +7,7 @@ test_suites=
     multiprocess,
     timer,
     blacklist,
-    whitelist,
+    mac_filter,
     ieee1588,
     checksum_offload,
     jumboframes,
