--- a/executions/execution_FVL.cfg
+++ b/executions/execution_FVL.cfg
@@ -20,7 +20,7 @@ test_suites=
     jumboframes,
     multiprocess,
     l2fwd,
-    whitelist,
+    mac_filter,
     blacklist,
     ipv4_reassembly,
     scatter,
