--- a/executions/execution_smoke.cfg
+++ b/executions/execution_smoke.cfg
@@ -24,7 +24,7 @@ test_suites=
     l2fwd,
     pmd,
     checksum_offload,
-    whitelist,
+    mac_filter,
     blacklist
 targets=
     x86_64-native-linuxapp-gcc
