Add unified packet type suite in execution file
Signed-off-by: Marvin Liu <yong.liu@intel.com>

--- a/executions/execution.cfg
+++ b/executions/execution.cfg
@@ -26,7 +26,8 @@ test_suites=
     pmdrssreta,
     pmd,
     l2fwd,
-    kni 
+    kni,
+    uni_pkt
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
