--- a/executions/execution_FVL.cfg
+++ b/executions/execution_FVL.cfg
@@ -27,7 +27,8 @@ test_suites=
     pmdrssreta,
     pmdrss_hash,
     ieee1588,
-    kni
+    kni,
+    uni_pkt
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
