conf: add sample for RedRockCanYou family nic
Signed-off-by: Marvin Liu <yong.liu@intel.com>

--- a/conf/ports.cfg
+++ b/conf/ports.cfg
@@ -4,6 +4,8 @@
 #     pci=Pci BDF,intf=Kernel interface;
 #     pci=Pci BDF,mac=Mac address,peer=Tester Pci BDF,numa=Port Numa 
 #     pci=Pci BDF,peer=IXIA:card.port
+#     pci=Pci BDF,peer=Tester Pci BDF,tp_ip=$(IP),tp_path=$({PERL_PATH);
+#     pci=Pci BDF,peer=Tester Pci BDF,sec_port=yes,first_port=Pci BDF;
 # [VM NAME] virtual machine name; This section is for virutal scenario
 # ports =
 #     dev_idx=device index of ports info, peer=Tester Pci BDF
@@ -11,7 +13,9 @@
 ports =
     pci=XX:XX.X,intf=eth0;
     pci=YY:YY.Y,mac=XX:XX:XX:XX:XX:XX,peer=ZZ:ZZ.Z,numa=0;
-    pci=ZZ:ZZ.Y,peer=IXIA:X.Y
+    pci=ZZ:ZZ.Y,peer=IXIA:X.Y;
+    pci=XX:XX.X,peer=ZZ:ZZ.Z,tp_ip=127.0.0.1,tp_path=/home/libertyTrailTP_322291/perl;
+    pci=YY:YY.Y,peer=ZZ:ZZ.Z,sec_port=yes,first_port=XX:XX.X;
 [VM NAME]
 ports =
     dev_idx=0,peer=XX:XX.X;
