tests vf_packet_rxtx: add vf reset test case
create three vfs from one pf, passthrough to two VMs, reset one vf 1000 times,
and check if other two vfs can works well or not.

Signed-off-by: Yulong Pei <yulong.pei@intel.com>

--- a/conf/vf_packet_rxtx.cfg
+++ b/conf/vf_packet_rxtx.cfg
@@ -103,3 +103,22 @@ vnc =
     displayNum=1;
 daemon =
     enable=yes;
+
+[vm1]
+cpu =
+    model=host,number=4,cpupin=9 10 11 12;
+disk =
+    file=/home/image/sriov-fc20-2.img;
+login =
+    user=root,password=tester;
+net =
+   type=nic,opt_vlan=1;
+   type=user,opt_vlan=1;
+monitor =
+    port=;
+qga =
+    enable=yes;
+vnc =
+    displayNum=2;
+daemon =
+    enable=yes;
