executions/execution.*: adding mlx5_core to bind Mellanox NIC's to the driver
Signed-off-by: Raslan Darawsheh <rdarawsheh@asaltech.com>

--- a/executions/execution.cfg
+++ b/executions/execution.cfg
@@ -1,6 +1,6 @@
 [Execution1]
 crbs=<CRB IP Address>
-drivername=<driver name igb_uio or vfio-pci>
+drivername=<driver name igb_uio or vfio-pci or mlx5_core>
 test_suites=
     cmdline,
     hello_world,
