--- a/executions/execution_FVL.cfg
+++ b/executions/execution_FVL.cfg
@@ -1,6 +1,6 @@
 [Execution1]
 crbs=<CRB IP Address>
-drivername=<driver name igb_uio or vfio-pci>
+drivername=<driver name igb_uio or vfio-pci or mlx5_core>
 test_suites=
     checksum_offload,
     dynamic_config,
