--- a/executions/execution_smoke.cfg
+++ b/executions/execution_smoke.cfg
@@ -1,6 +1,6 @@
 [Execution1]
 crbs=<CRB IP Address>
-drivername=<driver name igb_uio or vfio-pci>
+drivername=<driver name igb_uio or vfio-pci or mlx5_core>
 test_suites=
     unit_tests_cmdline,
     unit_tests_eal,
