framework: fix issue without 100g ixia configuration
This patch fix an issue that if the ixia.cfg doesn't set the le_rsfec.
1. Change the enable_rsfec to force100g for better understanding.
2. Set force100g disable if user didn't set the value in config file.

Signed-off-by: Qian Xu <qian.q.xu@intel.com>

--- a/conf/ixia.cfg
+++ b/conf/ixia.cfg
@@ -3,7 +3,7 @@
 # Version  : IXIA TCL server version
 # IP       : IXIA server IP address
 # Ports    : [IXIA port list]
-# ixia_enable_rsfec: We need to set this to enable if we need IXIA port work in 100G mode.
+# ixia_force100g: We need to set this to enable if we need IXIA port work in 100G mode.
 [IXIA Group]
 ixia_version=6.62
 ixia_ip=xxx.xxx.xxx.xxx
@@ -12,4 +12,4 @@ ixia_ports=
     card=1,port=2;
     card=1,port=3;
     card=1,port=4;
-ixia_enable_rsfec=disable
+ixia_force100g=disable
