conf ports: add pci domain in configuration file
Signed-off-by: Marvin Liu <yong.liu@intel.com>

--- a/conf/ports.cfg
+++ b/conf/ports.cfg
@@ -14,9 +14,9 @@ ports =
     pci=XX:XX.X,intf=eth0;
     pci=YY:YY.Y,mac=XX:XX:XX:XX:XX:XX,peer=ZZ:ZZ.Z,numa=0;
     pci=ZZ:ZZ.Y,peer=IXIA:X.Y;
-    pci=XX:XX.X,peer=ZZ:ZZ.Z,tp_ip=127.0.0.1,tp_path=/home/libertyTrailTP_322291/perl;
-    pci=YY:YY.Y,peer=ZZ:ZZ.Z,sec_port=yes,first_port=XX:XX.X;
+    pci=0000:XX:XX.X,peer=0000:ZZ:ZZ.Z,tp_ip=127.0.0.1,tp_path=/home/libertyTrailTP_322291/perl;
+    pci=0000:YY:YY.Y,peer=0000:ZZ:ZZ.Z,sec_port=yes,first_port=XX:XX.X;
 [VM NAME]
 ports =
-    dev_idx=0,peer=XX:XX.X;
-    dev_idx=1,peer=YY:YY.Y;
+    dev_idx=0,peer=0000:XX:XX.X;
+    dev_idx=1,peer=0000:YY:YY.Y;
