conf: Fix a typo in crbs.cfg.
This patch fixes a typo in conf/crbs.cfg.

Signed-off-by: Rami Rosen <rami.rosen@intel.com>

--- a/conf/crbs.cfg
+++ b/conf/crbs.cfg
@@ -6,7 +6,7 @@
 #  os: operation system type linux or freebsd
 #  tester_ip: Tester ip address
 #  tester_passwd: Tester password
-#  ixia_group: IXIA group nmae
+#  ixia_group: IXIA group name
 #  channels: Board channel number
 #  bypass_core0: Whether by pass core0
 [DUT IP1]
