framework qemu_kvm: add server mode and multi queue support
1. Server mode In vhost reconnection test, we need set qemu
work in server mode(default is client mode) The sample command is :
"-chardev socket,id=char0,path=./vhost-net1,server"
2. Multiqueue
We can set multiqueue connection between vhost and virtio. Add this parameter for the
multi-queue performance testing. The sample command is: "-netdev
type=vhost-user,id=mynet1,chardev=char0,vhostforce,queues=4"
3. Change the VM launch waiting time. Some times,we find that lauching vm need more time.
So change count=20 to count 40

Signed-off-by: lei yao <lei.a.yao@intel.com>

--- a/conf/vhost_sample.cfg
+++ b/conf/vhost_sample.cfg
@@ -1,4 +1,63 @@
+# QEMU options
+# name
+#       name: vm0
+#
+# enable_kvm
+#       enable: [yes | no]
+#
+# cpu
+#       model: [host | core2duo | ...]
+#           usage:
+#               choose model value from the command
+#                   qemu-system-x86_64 -cpu help
+#       number: '4' #number of vcpus
+#       cpupin: '3 4 5 6' # host cpu list
+#
+# mem
+#       size: 1024
+#
+# disk
+#       file: /path/to/image/test.img
+#
+# char
+#       opt_path: define the file path to vhost-net socket file
+#       opt_server: define the qemu socket connection work at server mode or client mdoe. Default is client
+#
+# net
+#       type: [vhost-user | ...]
+#           vhost-user
+#               opt_queue: queue=n, used for multi-queue connection between vhost and virtio
+#
+# device
+#       driver: [ virtio-net-pci | ...]
+#           virtio-net-pci
+#               prop_netdev: netdev0
+#               opt_mac: 00:00:00:00:01:03
+#
+# monitor
+#       port: 6061
+#           note: if adding monitor to vm, need to specicy
+#                 this port, else it will get a free port
+#                 on the host machine.
+#
+# qga
+#       enable: [yes | no]
+#
+# serial_port
+#       enable: [yes | no]
+#
+# vnc
+#       displayNum: 1
+#           note: you can choose a number not used on the host.
+#
+# daemon
+#       enable: 'yes'
+#           note:
+#               By default VM will start with the daemonize status.
+#               Not support starting it on the stdin now.
+
 # vm configuration for vhost sample case
+
 [vm0]
 cpu =
     model=host,number=2,cpupin=24 25;
