framework settings: Adding support for 40G devices
- Added user configurable parameter of linkspeed.
- Now when collecting pci devices info in
  pci_devices_information_uncached_linux devices are checked if they are
  from cavium and if so linkspeed is detected based on user value
  to append 10Gb or 40G interfaces.
- Added info to calculate bitrate for 40G NIC in wirespeed() .
- dts_parse_param will parse linkspeed also.
- Added HOST_NIC_LINKSPEED to DTS global environment variable

Signed-off-by: Ayuj Verma <Ayuj.Verma@cavium.com>

--- a/conf/crbs.cfg
+++ b/conf/crbs.cfg
@@ -1,31 +1,10 @@
-#DUT crbs Configuration
-#[DUT IP]
-#  dut_ip: DUT ip address
-#  dut_user: Login DUT username
-#  dut_passwd: Login DUT password
-#  os: operation system type linux or freebsd
-#  tester_ip: Tester ip address
-#  tester_passwd: Tester password
-#  ixia_group: IXIA group name
-#  channels: Board channel number
-#  bypass_core0: Whether by pass core0
-[DUT IP1]
-dut_ip=xxx.xxx.xxx.xxx
+[10.161.103.44]
+dut_ip=10.161.103.166
 dut_user=root
-dut_passwd=
+dut_passwd=a
 os=linux
-tester_ip=xxx.xxx.xxx.xxx
-tester_passwd=
-ixia_group=
+tester_ip=10.161.103.166
+tester_passwd=a
 channels=4
 bypass_core0=True
-[DUT IP2]
-dut_ip=yyy.yyy.yyy.yyy
-dut_user=root
-dut_passwd=
-os=linux
-tester_ip=yyy.yyy.yyy.yyy
-tester_passwd=
-ixia_group=
-channels=4
-bypass_core0=True
+ixia_group=IXIA 88XX-1
