--- a/executions/execution.cfg
+++ b/executions/execution.cfg
@@ -31,6 +31,7 @@ test_suites=
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=cfg:func=true
+linkspeed=<Link Speed of NIC>Mb/s
 
 [Execution2]
 crbs=<Performance CRB IP Address>
@@ -42,3 +43,4 @@ test_suites=
 targets=
     x86_64-native-linuxapp-gcc
 parameters=nic_type=niantic:perf=true
+linkspeed=<Link Speed of NIC>Mb/s
