Reverting back changes done by mistake.
Signed-off-by: Ayuj Verma <Ayuj.Verma@cavium.com>

--- a/conf/ixia.cfg
+++ b/conf/ixia.cfg
@@ -4,10 +4,12 @@
 # IP       : IXIA server IP address
 # Ports    : [IXIA port list]
 # ixia_force100g: We need to set this to enable if we need IXIA port work in 100G mode.
-[IXIA 88XX-1]
-ixia_version=8.10
-ixia_ip=10.161.103.215
+[IXIA Group]
+ixia_version=6.62
+ixia_ip=xxx.xxx.xxx.xxx
 ixia_ports=
-    card=3,port=7;
-    card=3,port=10;
+    card=1,port=1;
+    card=1,port=2;
+    card=1,port=3;
+    card=1,port=4;
 ixia_force100g=disable
